new changes of delete of family

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Create and share your wedding family tree digitally" />
     <meta property="og:type" content="website" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="" />
   </head>
 
   <body>
